src/test/ui/const_evaluatable/no_where_clause.stderr
error: unconstrained generic constant
  --> $DIR/no_where_clause.rs:10:6
   |
LL |   b: [f32; complex_maths(N)],
   |      ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound using this expression: where [u8; complex_maths(N)]: Sized
  --> $DIR/no_where_clause.rs:10:12
   |
LL |   b: [f32; complex_maths(N)],
   |            ^^^^^^^^^^^^^^^^

error: aborting due to previous error

